# FundPilot

./: .gitignore  Makefile  README.md  config.example.yaml  docker-compose.yml
backend/: .env.example  Makefile  README.md  go.mod  go.sum
backend/cmd/: README.md
backend/cmd/calendar-seed/: main.go  parse_test.go
backend/cmd/fundpilot/: main.go
backend/cmd/migrate/: main.go
backend/internal/asset/: doc.go  errors.go  ports.go  position.go  repo.go  repo_test.go  service.go  service_dto.go  service_helpers.go  service_test.go
backend/internal/fund/: doc.go
backend/internal/market/: doc.go
backend/internal/platform/calendar/: calendar.go  calendar_test.go  doc.go
backend/internal/platform/config/: config.go  config_test.go  doc.go
backend/internal/platform/db/: db.go  db_test.go  doc.go
backend/internal/platform/errors/: doc.go  errors.go  errors_test.go
backend/internal/platform/failure/: doc.go  failure.go  failure_test.go
backend/internal/platform/httpclient/: doc.go  httpclient.go  httpclient_test.go
backend/internal/platform/httpserver/: httpserver.go  httpserver_test.go
backend/internal/platform/logger/: doc.go  logger.go  logger_test.go
backend/internal/platform/scheduler/: doc.go  scheduler.go  scheduler_test.go
backend/internal/valuation/: doc.go
backend/migrations/: 0001_trade_calendar.sql  0002_positions_and_valuations.sql
cmd/fundpilot/: main.go
frontend/: README.md
script/: README.md  pyproject.toml
script/data_probe/: __init__.py  probe_trade_calendar.py
script/ocr_sidecar/: README.md
